# SocialPacman-LoPS

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  preestimation_fmri_refactor_analysis.md  v1.0-MILESTONE-AUDIT.md
LoPS_share_package/LoPS/: .gitignore  AGENTS.md  README.md  pyproject.toml
LoPS_share_package/LoPS/.planning/: preestimation_fmri_refactor_analysis.md
LoPS_share_package/LoPS/docs/: data_flow.html  field_data_flow_audit.md  prompt.md
LoPS_share_package/LoPS/script/: 01_mat_to_raw_subject_data.py  02_raw_subject_data_to_frame_data.py  03_frame_data_preprocess.py  04_human_tile_data_preprocess.py  12_divide_person.py  __init__.py
LoPS_share_package/LoPS/script/pacman_video/: __init__.py  run_render_table.py
LoPS_share_package/LoPS/src/LoPS/: structure_learning.py
LoPS_share_package/LoPS/src/LoPS/calculate_utility/: __init__.py  processing.py
LoPS_share_package/LoPS/src/LoPS/generate_grammar/: __init__.py  config.py  data.py  grammar.py  grammar_process.py  pipeline.py
LoPS_share_package/LoPS/src/LoPS/hierarchical_utility/: __init__.py  strategies.py
LoPS_share_package/LoPS/src/LoPS/pacman_preprocess/: __init__.py  mat_to_raw_subject_data.py
LoPS_share_package/LoPS/src/LoPS/pacman_video/: __init__.py
LoPS_share_package/LoPS/tests/: __init__.py  generate_grammar_fixtures.py  test_generate_grammar_foundation.py  test_generate_grammar_pipeline.py  test_generate_grammar_process.py  test_human_tile_data_preprocess.py  test_pacman_frame_data.py
data/: README.md
docs/: 04_tile_sampling_issue_solution.md  05_utility_numeric_bug_audit.md  data_flow.html  prompt.md  (+3 more)
(+172 files in other folders)
