[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[project]
name = "lops"
version = "0.1.0"
description = "Tools for systematic refactoring and verification of external research scripts."
authors = [
    { name = "Zhi-Hua Zhu", email = "767746811@qq.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy>=2.1,<3.0",
    "pandas>=2.3,<3.0",
    "scipy>=1.15,<2.0",
    "h5py>=3.12,<4.0",
    "pillow>=10.0,<12.0",
    "scikit-opt>=0.6,<0.7",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]


[tool.poetry]
packages = [{ include = "LoPS", from = "src" }]
